--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js tests.yaml"
+    "test": "node index.js tests.yaml",
+    "build:circuit:compile": "npx circom circuit/merkle_tree.circom -o build/circuit/merkle_tree.json && npx snarkjs info -c build/circuit/merkle_tree.json",
+    "build:circuit:setup": "npx snarkjs setup --protocol groth -c build/circuit/merkle_tree.json --pk build/circuit/merkle_tree_proving_key.json --vk build/circuit/merkle_tree_verification_key.json",
+    "build:circuit:bin": "node node_modules/websnark/tools/buildpkey.js -i build/circuit/merkle_tree_proving_key.json -o build/circuit/merkle_tree_proving_key.bin",
+    "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin",
+    "build": "npm run clean && npm run build:circuit",
+    "clean": "rm -rf build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jwasinger/groth16-verify-wasm.git"
+    "url": "git+https://github.com/jwasinger/daiquiri.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jwasinger/groth16-verify-wasm/issues"
+    "url": "https://github.com/jwasinger/daiquiri/issues"
   },
-  "homepage": "https://github.com/jwasinger/groth16-verify-wasm#readme",
+  "homepage": "https://github.com/jwasinger/daiquiri#readme",
   "dependencies": {
-    "assemblyscript": "github:AssemblyScript/assemblyscript",
-    "wabt": "1.0.11",
     "gulp": "^4",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "snarkjs": "^0.1.20",
+    "wabt": "1.0.11",
+    "websnark": "0.0.5",
+    "circom": "0.0.34",
+    "circomlib": "0.0.20"
   }
 }
