--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:circuit:setup": "npx snarkjs setup --protocol groth -c build/circuit/merkle_tree.json --pk build/circuit/merkle_tree_proving_key.json --vk build/circuit/merkle_tree_verification_key.json",
     "build:circuit:bin": "node node_modules/websnark/tools/buildpkey.js -i build/circuit/merkle_tree_proving_key.json -o build/circuit/merkle_tree_proving_key.bin",
     "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin",
-    "build": "npm run clean && npm run build:circuit",
+    "build:verifier": "asc assembly/groth16-verify/main.ts -b assembly/groth16-verify/out/main.wasm -t assembly/groth16-verify/out/main.wat --validate && cd assembly/groth16-verify && gulp",
+    "build": "npm run clean && npm run build:circuit && npm run build:verifier",
     "clean": "rm -rf build"
   },
   "repository": {
