--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:circuit:compile": "npx circom circuit/merkle_tree.circom -o build/circuit/merkle_tree.json && npx snarkjs info -c build/circuit/merkle_tree.json",
     "build:circuit:setup": "npx snarkjs setup --protocol groth -c build/circuit/merkle_tree.json --pk build/circuit/merkle_tree_proving_key.json --vk build/circuit/merkle_tree_verification_key.json",
     "build:circuit:bin": "node node_modules/websnark/tools/buildpkey.js -i build/circuit/merkle_tree_proving_key.json -o build/circuit/merkle_tree_proving_key.bin",
-    "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin && npm run build:gen_proof",
-    "build:verifier": "asc assembly/groth16-verify/main.ts -b assembly/groth16-verify/out/main.wasm -t assembly/groth16-verify/out/main.wat --validate && cd assembly/groth16-verify && gulp",
+    "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin && npm run gen_proof",
+    "build:verifier": "npx asc assembly/groth16-verify/main.ts -b assembly/groth16-verify/out/main.wasm -t assembly/groth16-verify/out/main.wat --validate && cd assembly/groth16-verify && gulp",
     "build": "npm run clean && npm run build:circuit && npm run build:verifier",
     "clean": "rm -rf build"
   },
@@ -32,6 +32,7 @@
     "wabt": "1.0.11",
     "websnark": "0.0.5",
     "circom": "0.0.34",
-    "circomlib": "0.0.20"
+    "circomlib": "0.0.20",
+    "assemblyscript": "0.8.1"
   }
 }
