--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "groth16-verify-wasm",
+  "name": "mimc-merkle-tree",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js tests.yaml",
-    "gen_proof": "rm -rf build/proof && mkdir build/proof && npx snarkjs calculatewitness -c build/circuit/merkle_tree.json -i input.json -w build/proof/witness.json --lo && snarkjs proof -w build/proof/witness.json --public build/proof/public.json --pk build/circuit/merkle_tree_proving_key.json -p build/proof/proof.json",
+    "test": "node index.js tests/tests.yml",
+    "gen_proof": "rm -rf build/proof && mkdir build/proof && npx snarkjs calculatewitness -c build/circuit/merkle_tree.json -i tests/circuit_input.json -w build/proof/witness.json --lo && snarkjs proof -w build/proof/witness.json --public build/proof/public.json --pk build/circuit/merkle_tree_proving_key.json -p build/proof/proof.json",
     "build:circuit:compile": "npx circom circuit/merkle_tree.circom -o build/circuit/merkle_tree.json && npx snarkjs info -c build/circuit/merkle_tree.json",
     "build:circuit:setup": "npx snarkjs setup --protocol groth -c build/circuit/merkle_tree.json --pk build/circuit/merkle_tree_proving_key.json --vk build/circuit/merkle_tree_verification_key.json",
     "build:circuit:bin": "node node_modules/websnark/tools/buildpkey.js -i build/circuit/merkle_tree_proving_key.json -o build/circuit/merkle_tree_proving_key.bin",
     "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin && npm run gen_proof",
-    "build:verifier": "npx asc assembly/groth16-verify/main.ts -b assembly/groth16-verify/out/main.wasm -t assembly/groth16-verify/out/main.wat --validate && cd assembly/groth16-verify && gulp",
+    "build:verifier": "npx asc assembly/merkle-tree/main.ts -b assembly/merkle-tree/out/main.wasm -t assembly/merkle-tree/out/main.wat --validate && cd assembly/merkle-tree && gulp",
     "build": "npm run clean && npm run build:circuit && npm run build:verifier",
     "clean": "rm -rf build"
   },
