add merkle proof wasm verifier, snark prover/verifier

--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "groth16-verify-wasm",
+  "name": "mimc-merkle-tree",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js tests.yaml"
+    "test": "node index.js tests/tests.yml",
+    "gen_proof": "rm -rf build/proof && mkdir build/proof && npx snarkjs calculatewitness -c build/circuit/merkle_tree.json -i tests/circuit_input.json -w build/proof/witness.json --lo && snarkjs proof -w build/proof/witness.json --public build/proof/public.json --pk build/circuit/merkle_tree_proving_key.json -p build/proof/proof.json",
+    "build:circuit:compile": "npx circom circuit/merkle_tree.circom -o build/circuit/merkle_tree.json && npx snarkjs info -c build/circuit/merkle_tree.json",
+    "build:circuit:setup": "npx snarkjs setup --protocol groth -c build/circuit/merkle_tree.json --pk build/circuit/merkle_tree_proving_key.json --vk build/circuit/merkle_tree_verification_key.json",
+    "build:circuit:bin": "node node_modules/websnark/tools/buildpkey.js -i build/circuit/merkle_tree_proving_key.json -o build/circuit/merkle_tree_proving_key.bin",
+    "build:circuit": "mkdir -p build/circuit && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:bin && npm run gen_proof",
+    "build:verifier": "npx asc assembly/merkle-tree/main.ts -b assembly/merkle-tree/out/main.wasm -t assembly/merkle-tree/out/main.wat --validate && cd assembly/merkle-tree && gulp",
+    "build": "npm run clean && npm run build:circuit && npm run build:verifier",
+    "clean": "rm -rf build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jwasinger/groth16-verify-wasm.git"
+    "url": "git+https://github.com/jwasinger/daiquiri.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jwasinger/groth16-verify-wasm/issues"
+    "url": "https://github.com/jwasinger/daiquiri/issues"
   },
-  "homepage": "https://github.com/jwasinger/groth16-verify-wasm#readme",
+  "homepage": "https://github.com/jwasinger/daiquiri#readme",
   "dependencies": {
-    "assemblyscript": "github:AssemblyScript/assemblyscript",
-    "wabt": "1.0.11",
     "gulp": "^4",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "snarkjs": "^0.1.20",
+    "wabt": "1.0.11",
+    "websnark": "0.0.5",
+    "circom": "0.0.34",
+    "circomlib": "0.0.20",
+    "assemblyscript": "0.8.1"
   }
 }
